Added base Metadata DTO abstraction.